Bug 5391 - Unexpectedly CopyObject of immediately passed Index reference is not reference
Summary: Unexpectedly CopyObject of immediately passed Index reference is not reference
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: ACPICA-Core (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Lin Ming
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-07 08:13 UTC by Valery A Podrezov
Modified: 2008-04-30 20:50 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
ASL code to reproduce bug. (507 bytes, text/plain)
2005-10-07 08:15 UTC, Valery A Podrezov
Details
proposed patch (2.98 KB, patch)
2007-11-06 20:19 UTC, Lin Ming
Details | Diff

Description Valery A Podrezov 2005-10-07 08:13:42 UTC
Most recent kernel where this bug did not occur:
Distribution:
Hardware Environment:
Software Environment:
Problem Description:

The Linux kernel ACPI interpreter fails the following
AML test when it is compiled into a simulator. So if an
OEM BIOS includes this code, Linux would fail.

Steps to reproduce:

Run interpreter with the .asl demo code attached below.
Comment 1 Valery A Podrezov 2005-10-07 08:15:59 UTC
Created attachment 6253 [details]
ASL code to reproduce bug.

The demo program shows that actually the result of CopyObject
operation applied to the immediately passed Index reference is
not reference as expected but the object referred itself.

INTERNAL BUG NUMBER

   127
Comment 2 Lin Ming 2007-11-06 20:19:26 UTC
Created attachment 13430 [details]
proposed patch

Have tested aginst ASLTS, no regression

If method call or CopyObject - leave the Reference on the stack
Comment 3 Len Brown 2008-04-30 20:50:30 UTC
shipped in linux-2.6.25-git16
1cb2ef6606e0abd8565f66b5f95267de1b390694
ACPICA: Fixed a problem with CopyObject used in conjunction with the Index operator

Note You need to log in before you can comment on or make changes to this bug.